--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="action_settings">Settings</string>
     <string name="action_connect">Connect</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="activity_settings">Settings</string>
+    <string name="activity_main">Robot Remote</string>
 </resources>
