--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="activity_settings">Settings</string>
     <string name="activity_main">Robot Remote</string>
+    <string name="button_scan">Scan</string>
+    <string name="button_cancel">Cancel</string>
+    <string name="activity_device_list">Select a device</string>
+    <string name="title_paired_devices">Paired Devices</string>
+    <string name="title_other_devices">Other Available Devices</string>
+    <string name="none_paired">No devices have been paired</string>
+    <string name="none_found">No devices found</string>
 </resources>
