Added name to calibration tab

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="title_other_devices">Other Available Devices</string>
     <string name="none_paired">No devices have been paired</string>
     <string name="none_found">No devices found</string>
+    <string name="tab_calibration">Calibration</string>
 </resources>
